Compare enums directly